--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
   "name": "lite-flag-icon",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "Lite version of flag-icon-css",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/maxlibin/lite-flag-icon-css"
   },
   "author": "",
   "license": "ISC"
