--- a/package.json
+++ b/package.json
@@ -4,12 +4,15 @@
   "description": "Lite version of flag-icon-css",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "prepare": "cd css; rm -f flag-icon.min.css; uglifycss flag-icon.css > flag-icon.min.css"
   },
   "repository": {
     "type": "git",
     "url": "https://github.com/maxlibin/lite-flag-icon-css"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "uglifycss": "0.0.29"
+  }
 }
